--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,5 @@
-<p>app-page-not-found</p>
+<section>
+    <h1>Page Note Found</h1>
+    <h2>Invalid URL!</h2>
+    <button mat-raised-button (click)="toNotesView()">Back to home</button>
+</section>
