--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,7 @@
         <h1>{{headerTitle}}</h1>
     </div>
     <div id="navbar">
-        <a> <button mat-icon-button routerLink="/">
+        <a> <button mat-icon-button routerLink="/notes">
             <mat-icon>home</mat-icon>
           </button></a>
           <button mat-icon-button>
@@ -20,8 +20,8 @@
           <button mat-icon-button>
            <mat-icon>settings</mat-icon>
          </button>
-         <a><button mat-icon-button routerLink="/register-user">
-          <mat-icon>person add</mat-icon>
+         <a><button mat-icon-button *ngIf="loggedIn===false" matTooltip="Register New User" routerLink="/register-user">
+          <mat-icon>person_add</mat-icon>
         </button></a> 
         <button mat-icon-button *ngIf="loggedIn===true">
           <mat-icon *ngIf="loggedIn===true" matTooltip="logout" (click)="logout()">logout</mat-icon>
